--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_glasstype.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_glasstype.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".glasstype">
+    tools:context=".Glasstype">
 
     <Button
         android:id="@+id/AcceptGlasstype"
@@ -18,7 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.451"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/imageView7"
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
