--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_doorhandletype.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_doorhandletype.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Doorhandletype">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -99,7 +98,7 @@
             android:layout_marginLeft="100dp"
             android:layout_marginTop="8dp"
             android:text="@string/sort_langgreb_to_sidet"
-            app:layout_constraintBottom_toTopOf="@+id/chooseDoorHandleType"
+            app:layout_constraintBottom_toTopOf="@+id/handletype"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -119,7 +118,7 @@
             app:layout_constraintTop_toBottomOf="@+id/Choice3" />
 
         <Button
-            android:id="@+id/chooseDoorHandleType"
+            android:id="@+id/handletype"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="100dp"
