--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_showwall.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_showwall.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".ShowWall" android:background="@color/white" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView android:layout_height="240dp" android:layout_width="213dp" app:srcCompat="@drawable/a14" app:layout_constraintVertical_bias="0.807" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/acceptwall" android:contentDescription="@string/app_name" android:layout_marginBottom="10dp" android:id="@+id/wallDesign"/>
 
