--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_doortype.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_doortype.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Doortype">
 
     <Button
-        android:id="@+id/handlebutton"
+        android:id="@+id/ChooseDoorHandleType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
@@ -107,7 +108,7 @@
         android:layout_marginLeft="100dp"
         android:layout_marginTop="8dp"
         android:text="@string/dubbelt_skyded_r_uden_l_s"
-        app:layout_constraintBottom_toTopOf="@+id/handlebutton"
+        app:layout_constraintBottom_toTopOf="@+id/ChooseDoorHandleType"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
