--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_main.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/black"
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
