--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_showwall.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_showwall.xml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".ShowWall" android:background="@color/white" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView android:layout_height="240dp" android:layout_width="213dp" app:srcCompat="@drawable/a14" app:layout_constraintVertical_bias="0.807" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/acceptwall" android:contentDescription="@string/app_name" android:layout_marginBottom="10dp" android:id="@+id/wallDesign"/>
 
     <ImageView android:background="@android:drawable/screen_background_dark" android:layout_height="244dp" android:layout_width="198dp" app:layout_constraintVertical_bias="0.817" app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/acceptwall" android:contentDescription="@string/app_name" android:layout_marginBottom="10dp" android:id="@+id/imageView6" app:layout_constraintStart_toEndOf="@+id/wallDesign" android:alpha="100"/>
 
-    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="100dp" android:id="@+id/acceptwall" app:layout_constraintBottom_toBottomOf="parent" app:iconPadding="16dp" app:backgroundTint="#BF8E55" android:text="@string/godkend_design"/>
+    <Button
+        android:id="@+id/acceptwall"
+        android:layout_width="142dp"
+        android:layout_height="62dp"
+        android:layout_marginBottom="96dp"
+        android:text="OK"
+        app:backgroundTint="#BF8E55"
+        app:iconPadding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.865"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/tilpasDesign"
+        android:layout_width="142dp"
+        android:layout_height="62dp"
+        android:layout_marginBottom="96dp"
+        android:text="Tilpas Design"
+        app:backgroundTint="#BF8E55"
+        app:iconPadding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.141"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toTopOf="@+id/imageView6" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="@+id/imageView6" android:id="@+id/AntalFag" app:layout_constraintStart_toEndOf="@+id/wallDesign" android:text="@string/antal_fag" android:textStyle="bold" android:textSize="18sp" android:textColor="@color/white" android:textAllCaps="true" android:fontFamily="@font/roboto" android:layout_marginTop="44dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
 
