--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_glasstype.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_glasstype.xml
@@ -6,23 +6,70 @@
     android:layout_height="match_parent"
     tools:context=".Glasstype">
 
-    <Button
-        android:id="@+id/AcceptGlasstype"
+    <EditText
+        android:id="@+id/editTextNumberDecimal2"
+        android:layout_width="206dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="152dp"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/doorHandleList"
+        app:layout_constraintVertical_bias="0.329" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="164dp"
+        android:text="Pris"
+        android:textColor="#272727"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimal"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/doorHandleList"
+        app:layout_constraintVertical_bias="0.314" />
+
+    <TextView
+        android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginRight="68dp"
+        android:layout_marginBottom="164dp"
+        android:text="kr."
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.28"
+        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal"
+        app:layout_constraintTop_toBottomOf="@+id/doorHandleList"
+        app:layout_constraintVertical_bias="0.329" />
+
+    <Button
+        android:id="@+id/AcceptGlasstype"
+        android:layout_width="171dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="70dp"
         android:text="@string/videre"
         app:backgroundTint="#BF8E55"
         app:iconPadding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.451"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7"
+        app:layout_constraintTop_toBottomOf="@+id/imageView1"
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="260dp"
@@ -37,7 +84,7 @@
         android:id="@+id/glasstypeinwalltext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="448dp"
+        android:layout_marginBottom="484dp"
         android:fontFamily="@font/roboto"
         android:text="@string/v_lg_typen_af_glas_i_v_ggen"
         android:textAllCaps="true"
@@ -45,14 +92,14 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.218"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/doorinwalltext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="192dp"
+        android:layout_marginBottom="240dp"
         android:fontFamily="@font/roboto"
         android:text="@string/skal_v_ggen_have_en_d_r"
         android:textAllCaps="true"
@@ -60,7 +107,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.198"
+        app:layout_constraintHorizontal_bias="0.373"
         app:layout_constraintStart_toStartOf="parent" />
 
     <CheckBox
@@ -71,57 +118,21 @@
         android:layout_marginLeft="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/doorinwalltext"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.029"
         app:layout_constraintStart_toEndOf="@+id/doorinwalltext"
         app:layout_constraintTop_toTopOf="@+id/doorinwalltext"
         app:layout_constraintVertical_bias="0.482" />
-
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="81dp"
-        android:layout_height="86dp"
-        android:layout_marginTop="20dp"
-        android:contentDescription="@string/afslut"
-        app:layout_constraintEnd_toEndOf="@+id/imageView14"
-        app:layout_constraintHorizontal_bias="0.151"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/glasstypeinwalltext"
-        tools:srcCompat="@drawable/standard" />
-
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="81dp"
-        android:layout_height="86dp"
-        android:layout_marginTop="24dp"
-        android:contentDescription="@string/afslut"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.866"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/glasstypeinwalltext"
-        tools:srcCompat="@drawable/lyd" />
-
-    <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="81dp"
-        android:layout_height="86dp"
-        android:layout_marginTop="20dp"
-        android:contentDescription="@string/afslut"
-        app:layout_constraintEnd_toStartOf="@+id/imageView14"
-        app:layout_constraintStart_toEndOf="@+id/imageView8"
-        app:layout_constraintTop_toBottomOf="@+id/glasstypeinwalltext"
-        tools:srcCompat="@drawable/satin" />
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="383dp"
         android:layout_height="67dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.943"
+        app:layout_constraintVertical_bias="0.891"
         tools:ignore="MissingConstraints">
 
         <RadioButton
@@ -131,40 +142,78 @@
             android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="12dp"
+            android:checked="true"
             android:text="@string/standard_glas"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/radioButton2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView8"
-            app:layout_constraintVertical_bias="0.0"
-            android:checked="true" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <RadioButton
             android:id="@+id/radioButton2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="12dp"
+            android:onClick="checkButton"
             android:text="@string/satin_glas"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView15"
-            android:onClick="checkButton" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView15" />
 
         <RadioButton
             android:id="@+id/radioButton3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
             android:layout_marginLeft="35dp"
+            android:layout_marginTop="12dp"
+            android:onClick="checkButton"
             android:text="@string/lyd_glas"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.456"
             app:layout_constraintStart_toEndOf="@+id/radioButton2"
-            app:layout_constraintTop_toBottomOf="@+id/imageView14"
-            android:onClick="checkButton" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView14" />
 
 
     </RadioGroup>
+
+    <ImageView
+        android:id="@+id/standardImg"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.126"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/glasstypeinwalltext"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/standard" />
+
+    <ImageView
+        android:id="@+id/satinImg"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="3dp"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.236"
+        app:layout_constraintStart_toEndOf="@+id/standardImg"
+        app:layout_constraintTop_toBottomOf="@+id/glasstypeinwalltext"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/satin" />
+
+    <ImageView
+        android:id="@+id/lydImg"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toEndOf="@+id/satinImg"
+        app:layout_constraintTop_toBottomOf="@+id/glasstypeinwalltext"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/lyd" />
 </androidx.constraintlayout.widget.ConstraintLayout>
