--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_doorhandletype.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_doorhandletype.xml
@@ -6,11 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".Doorhandletype">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".Doortype">
-
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
@@ -39,13 +34,26 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
+    <RadioGroup
+        android:id="@+id/radioGroup_handle"
+        android:layout_width="325dp"
+        android:layout_height="269dp"
+        android:layout_centerInParent="true"
+        app:layout_constraintBottom_toTopOf="@+id/confirmHandle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.186"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.724"
+        tools:ignore="MissingConstraints">
+
         <RadioButton
             android:id="@+id/Choice1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginLeft="100dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="3dp"
             android:text="@string/messing_langgreb"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -58,12 +66,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginLeft="100dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/st_l_langgreb"
+            android:layout_marginTop="3dp"
+            android:text="@string/messing_langgreb_2_sider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Choice1" />
+            app:layout_constraintTop_toBottomOf="@+id/Choice3" />
+
 
         <RadioButton
             android:id="@+id/Choice3"
@@ -71,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginLeft="100dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="3dp"
             android:text="@string/sort_langgreb"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -84,12 +93,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginLeft="100dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/st_l_langgreb_2_sidet"
+            android:layout_marginTop="3dp"
+            android:text="@string/sort_langgreb_2_sider"
+            app:layout_constraintBottom_toTopOf="@+id/confirmHandle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Choice6" />
+            app:layout_constraintTop_toBottomOf="@+id/Choice4" />
 
         <RadioButton
             android:id="@+id/Choice5"
@@ -97,39 +107,75 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
             android:layout_marginLeft="100dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/sort_langgreb_to_sidet"
-            app:layout_constraintBottom_toTopOf="@+id/chooseDoorHandleType"
+            android:layout_marginTop="3dp"
+            android:text="@string/ingen"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Choice4" />
+            app:layout_constraintTop_toBottomOf="@+id/Choice6" />
 
-        <RadioButton
-            android:id="@+id/Choice6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/messing_langgreb_2_sidet"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Choice3" />
 
-        <Button
-            android:id="@+id/chooseDoorHandleType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="100dp"
-            android:text="@string/v_lg_d_rh_ndtag"
-            app:backgroundTint="#BF8E55"
-            app:iconPadding="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+    </RadioGroup>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/confirmHandle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:text="@string/v_lg_d_rh_ndtag"
+        app:backgroundTint="#BF8E55"
+        app:iconPadding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/priceWithDoorHandle"
+        android:layout_width="185dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="136dp"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/doorHandleList"
+        app:layout_constraintVertical_bias="0.329" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="80dp"
+        android:layout_marginRight="80dp"
+        android:layout_marginBottom="148dp"
+        android:text="kr."
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.28"
+        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal"
+        app:layout_constraintTop_toBottomOf="@+id/doorHandleList"
+        app:layout_constraintVertical_bias="0.329" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginBottom="144dp"
+        android:text="Pris"
+        android:textColor="#272727"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimal"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/doorHandleList"
+        app:layout_constraintVertical_bias="0.314" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
