--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_doortype.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_doortype.xml
@@ -6,16 +6,64 @@
     android:layout_height="match_parent"
     tools:context=".Doortype">
 
+    <EditText
+        android:id="@+id/priceWithDoorHandle"
+        android:layout_width="176dp"
+        android:layout_height="46dp"
+        android:layout_marginBottom="95dp"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/doorHandleList"
+        app:layout_constraintVertical_bias="0.329" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginBottom="110dp"
+        android:text="Pris"
+        android:textColor="#272727"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimal"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/doorHandleList"
+        app:layout_constraintVertical_bias="0.314" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="80dp"
+        android:layout_marginRight="80dp"
+        android:layout_marginBottom="108dp"
+        android:text="kr."
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.28"
+        app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal"
+        app:layout_constraintTop_toBottomOf="@+id/doorHandleList"
+        app:layout_constraintVertical_bias="0.329" />
+
     <Button
         android:id="@+id/ChooseDoorHandleType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="48dp"
         android:text="@string/v_lg_d_r"
         app:backgroundTint="#BF8E55"
         app:iconPadding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/acceptcadmeasurements"
         app:layout_constraintVertical_bias="1.0" />
@@ -33,19 +81,6 @@
         app:srcCompat="@drawable/logo1" />
 
 
-    <!--    <RadioGroup-->
-<!--        android:id="@+id/radioGroup"-->
-<!--        android:layout_width="383dp"-->
-<!--        android:layout_height="67dp"-->
-<!--        android:layout_marginTop="268dp"-->
-<!--        android:orientation="vertical"-->
-<!--        app:layout_constraintBottom_toBottomOf="@+id/imageView7"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.428"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.943"-->
-<!--        tools:ignore="MissingConstraints">-->
 
     <TextView
         android:id="@+id/DoorChoice"
@@ -58,13 +93,12 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/radioGroup_door"
         android:layout_width="323dp"
         android:layout_height="337dp"
         android:layout_centerInParent="true"
@@ -72,7 +106,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DoorChoice"
-        app:layout_constraintVertical_bias="0.175"
+        app:layout_constraintVertical_bias="0.346"
         tools:ignore="MissingConstraints">
 
 
@@ -82,7 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="55dp"
             android:layout_marginLeft="55dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="3dp"
             android:text="@string/enkeltd_r_uden_l_sekasse"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -95,20 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="55dp"
             android:layout_marginLeft="55dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/dubbeltd_r_uden_l_sekasse"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Choice1" />
-
-        <RadioButton
-            android:id="@+id/Choice3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="55dp"
-            android:layout_marginLeft="55dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="3dp"
             android:text="@string/enkeltd_r_med_l_sekassee"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -116,17 +137,31 @@
             app:layout_constraintTop_toBottomOf="@+id/Choice2" />
 
         <RadioButton
+            android:id="@+id/Choice3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="55dp"
+            android:layout_marginLeft="55dp"
+            android:layout_marginTop="3dp"
+            android:text="@string/dubbeltd_r_uden_l_sekasse"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Choice1" />
+
+        <RadioButton
             android:id="@+id/Choice4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="55dp"
             android:layout_marginLeft="55dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/enkelt_skyded_r_uden_l_s"
+            android:layout_marginTop="3dp"
+            android:text="@string/dubbeltd_r_med_l_sekasse"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Choice6" />
+            app:layout_constraintTop_toBottomOf="@+id/Choice3" />
+
 
         <RadioButton
             android:id="@+id/Choice5"
@@ -134,13 +169,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="55dp"
             android:layout_marginLeft="55dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/dubbelt_skyded_r_uden_l_s"
-            app:layout_constraintBottom_toTopOf="@+id/ChooseDoorHandleType"
+            android:layout_marginTop="3dp"
+            android:text="@string/enkelt_skyded_r_uden_l_s"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Choice4" />
+            app:layout_constraintTop_toBottomOf="@+id/Choice6" />
 
         <RadioButton
             android:id="@+id/Choice6"
@@ -148,12 +182,15 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="55dp"
             android:layout_marginLeft="55dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/dubbeltd_r_med_l_sekasse"
+            android:layout_marginTop="3dp"
+            android:text="@string/dubbelt_skyded_r_uden_l_s"
+            app:layout_constraintBottom_toTopOf="@+id/ChooseDoorHandleType"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Choice3" />
+            app:layout_constraintTop_toBottomOf="@+id/Choice4" />
+
+
 
     </RadioGroup>
 
