--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_glasstype.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_glasstype.xml
@@ -7,7 +7,7 @@
     tools:context=".Glasstype">
 
     <EditText
-        android:id="@+id/priceWithGlass"
+        android:id="@+id/totalPrice_gt"
         android:layout_width="206dp"
         android:layout_height="42dp"
         android:layout_marginBottom="152dp"
