--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_showwall.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_showwall.xml
@@ -2,9 +2,36 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout tools:context=".ShowWall" android:background="@color/white" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView android:layout_height="240dp" android:layout_width="213dp" app:srcCompat="@drawable/a14" app:layout_constraintVertical_bias="0.807" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/acceptwall" android:contentDescription="@string/app_name" android:layout_marginBottom="10dp" android:id="@+id/wallDesign"/>
+    <ImageView
+        android:id="@+id/wallDesign"
+        android:layout_width="213dp"
+        android:layout_height="240dp"
+        android:layout_marginTop="276dp"
+        android:layout_marginBottom="10dp"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toTopOf="@+id/acceptwall_d"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.807"
+        app:srcCompat="@drawable/a14" />
 
-    <ImageView android:background="@android:drawable/screen_background_dark" android:layout_height="244dp" android:layout_width="198dp" app:layout_constraintVertical_bias="0.817" app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/acceptwall" android:contentDescription="@string/app_name" android:layout_marginBottom="10dp" android:id="@+id/imageView6" app:layout_constraintStart_toEndOf="@+id/wallDesign" android:alpha="100"/>
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="198dp"
+        android:layout_height="244dp"
+        android:layout_marginTop="276dp"
+        android:layout_marginBottom="10dp"
+        android:alpha="100"
+        android:background="@android:drawable/screen_background_dark"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toTopOf="@+id/acceptwall_d"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/wallDesign"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.817" />
 
     <Button
         android:id="@+id/acceptwall"
@@ -20,7 +47,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/tilpasDesign"
+        android:id="@+id/adjust"
         android:layout_width="142dp"
         android:layout_height="62dp"
         android:layout_marginBottom="96dp"
@@ -32,7 +59,23 @@
         app:layout_constraintHorizontal_bias="0.141"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toTopOf="@+id/imageView6" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="@+id/imageView6" android:id="@+id/AntalFag" app:layout_constraintStart_toEndOf="@+id/wallDesign" android:text="@string/antal_fag" android:textStyle="bold" android:textSize="18sp" android:textColor="@color/white" android:textAllCaps="true" android:fontFamily="@font/roboto" android:layout_marginTop="44dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        android:id="@+id/AntalFag"
+        app:layout_constraintStart_toEndOf="@+id/wallDesign"
+        android:text="@string/antal_fag"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:textColor="@color/white"
+        android:textAllCaps="true"
+        android:fontFamily="@font/roboto"
+        android:layout_marginTop="44dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"/>
 
     <ImageView
         android:id="@+id/imageView13"
@@ -46,12 +89,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/logo1" />
 
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.099" app:layout_constraintTop_toTopOf="@+id/imageView6" app:layout_constraintHorizontal_bias="0.692" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/fagInput" app:layout_constraintStart_toEndOf="@+id/AntalFag" app:layout_constraintBottom_toBottomOf="parent" android:text="@string/_0" android:textSize="18sp" android:textColor="#FFFFFF"/>
+    <TextView
+        android:id="@+id/totalFrame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/_0"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.692"
+        app:layout_constraintStart_toEndOf="@+id/AntalFag"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="0.099" />
 
     <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toTopOf="@+id/imageView6" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="@+id/imageView6" android:id="@+id/AntalGlas" app:layout_constraintStart_toEndOf="@+id/wallDesign" android:text="@string/antal_glas" android:textStyle="bold" android:textSize="18sp" android:textColor="@color/white" android:textAllCaps="true" android:fontFamily="@font/roboto" android:layout_marginTop="100dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
 
     <TextView
-        android:id="@+id/glasInput"
+        android:id="@+id/totalGlass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_0"
@@ -66,7 +121,7 @@
 
     <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toTopOf="@+id/imageView6" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="@+id/imageView6" android:id="@+id/Pris" app:layout_constraintStart_toEndOf="@+id/wallDesign" android:text="@string/pris" android:textStyle="bold" android:textSize="18sp" android:textColor="@color/white" android:textAllCaps="true" android:fontFamily="@font/roboto" android:layout_marginTop="156dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
 
-    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.101" android:id="@+id/prisInput" app:layout_constraintStart_toEndOf="@+id/Pris" app:layout_constraintBottom_toBottomOf="parent" android:text="@string/_9_850" android:textSize="18sp" android:textColor="#FFFFFF" app:layout_constraintTop_toBottomOf="@+id/AntalGlas" app:layout_constraintEnd_toStartOf="@+id/DKK"/>
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.101" android:id="@+id/totalPrice" app:layout_constraintStart_toEndOf="@+id/Pris" app:layout_constraintBottom_toBottomOf="parent" android:text="@string/_9_850" android:textSize="18sp" android:textColor="#FFFFFF" app:layout_constraintTop_toBottomOf="@+id/AntalGlas" app:layout_constraintEnd_toStartOf="@+id/DKK"/>
 
     <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintTop_toTopOf="@+id/imageView6" app:layout_constraintHorizontal_bias="0.837" app:layout_constraintEnd_toEndOf="@+id/imageView6" android:id="@+id/DKK" app:layout_constraintStart_toEndOf="@+id/wallDesign" android:text="@string/dkk" android:textStyle="bold" android:textSize="18sp" android:textColor="@color/white" android:textAllCaps="true" android:fontFamily="@font/roboto" android:layout_marginTop="156dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
 
