--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_usermeasurements.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_usermeasurements.xml
@@ -22,18 +22,21 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintEnd_toEndOf="parent"
+    <EditText
         android:id="@+id/height_input"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        android:inputType="number"
-        android:hint="@string/m_l_angives_i_centimeter"
-        android:ems="10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:autofillHints=""
-        android:layout_marginTop="1dp"/>
+        android:ems="10"
+        android:hint="@string/m_l_angives_i_centimeter"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.175" />
 
     <EditText android:layout_height="wrap_content"
         android:layout_width="wrap_content"
@@ -65,32 +68,32 @@
         android:fontFamily="@font/roboto"/>
 
     <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.469"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/indtast_h_jden_p_v_ggen"
         android:id="@+id/textView3"
-        android:layout_marginTop="300dp"
-        app:layout_constraintVertical_bias="0.004"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textAllCaps="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
         android:fontFamily="@font/roboto"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:text="@string/indtast_h_jden_p_v_ggen"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="260dp"
         android:id="@+id/imageView5"
-        app:srcCompat="@drawable/logo1"
-        android:contentDescription="@string/afslut"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="260dp"
+        android:contentDescription="@string/afslut"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/logo1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
